# github_actions

./: main.py  pyproject.toml
.github/workflows/: actions.yml  main.yml  super-linter.yml  tests.yml
src/: main.py
tests/: test_function.py
